backend/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: back
spec:
  selector:
    matchLabels:
      app: backend # service.yaml 안의 selector.app 이름과 동일해야 한다. 
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: seonwoohongmin/backend:v27
          ports:
            - containerPort: 8085
