backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: backend-svc
spec:
  type: NodePort
  selector:
    app: backend # deployment file 안의 selector.app의 이름과 동일해야 한다. 
  ports:
  - protocol: TCP
    port: 8080 # service port number, 인그레스 파일안의 포트 넘버와 동일해야 한다. 
    targetPort: 8085 # port number of target pod in node, 디플로이먼트 파일안의 포트 넘버와 동일해야 한다.
